refactor: remove raw ">"

--- a/index.html
+++ b/index.html
@@ -78,28 +78,28 @@
           <h2 class="section-title">Skills</h2>
           <ul class="skills-list">
             <li class="skills-item">
-              <img src="https://img.shields.io/badge/-HTML-333?style=for-the-badge&logo=html5" alt="html5" class="skills-img">
+              <img src="https://img.shields.io/badge/-HTML-333?style=for-the-badge&amp;logo=html5" alt="html5" class="skills-img">
             </li>
             <li class="skills-item">
-              <img src="https://img.shields.io/badge/-CSS-333?style=for-the-badge&logo=css3&logoColor=blue" alt="css" class="skills-img">
+              <img src="https://img.shields.io/badge/-CSS-333?style=for-the-badge&amp;logo=css3&amp;logoColor=blue" alt="css" class="skills-img">
             </li>
             <li class="skills-item">
-              <img src="https://img.shields.io/badge/-SASS-333?style=for-the-badge&logo=SASS" alt="sass" class="skills-img">
+              <img src="https://img.shields.io/badge/-SASS-333?style=for-the-badge&amp;logo=SASS" alt="sass" class="skills-img">
             </li>
             <li class="skills-item">
-              <img src="https://img.shields.io/badge/-JavaScript-333?style=for-the-badge&logo=javascript" alt="JavaScript" class="skills-img">
+              <img src="https://img.shields.io/badge/-JavaScript-333?style=for-the-badge&amp;logo=javascript" alt="JavaScript" class="skills-img">
             </li>
             <li class="skills-item">
-              <img src="https://img.shields.io/badge/-TypeScript-333?style=for-the-badge&logo=TypeScript" alt="TypeScript" class="skills-img">
+              <img src="https://img.shields.io/badge/-TypeScript-333?style=for-the-badge&amp;logo=TypeScript" alt="TypeScript" class="skills-img">
             </li>
             <li class="skills-item">
-              <img src="https://img.shields.io/badge/-WebPack-333?style=for-the-badge&logo=WebPack" alt="WebPack" class="skills-img">
+              <img src="https://img.shields.io/badge/-WebPack-333?style=for-the-badge&amp;logo=WebPack" alt="WebPack" class="skills-img">
             </li>
             <li class="skills-item">
-              <img src="https://img.shields.io/badge/-Git-333?style=for-the-badge&logo=Git" alt="Git" class="skills-img">
+              <img src="https://img.shields.io/badge/-Git-333?style=for-the-badge&amp;logo=Git" alt="Git" class="skills-img">
             </li>
             <li class="skills-item">
-              <img src="https://img.shields.io/badge/-Figma-333?style=for-the-badge&logo=Figma" alt="Figma" class="skills-img">
+              <img src="https://img.shields.io/badge/-Figma-333?style=for-the-badge&amp;logo=Figma" alt="Figma" class="skills-img">
             </li>
           </ul>
         </section>
@@ -188,6 +188,5 @@
       </div>
     </footer>
   </div>
-
 </body>
 </html>
