fix: remove ">" symbol

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
           <pre>
             <code>
             function drawButtons(btns) {
-              btns.forEach((btn) => {
+              btns.forEach((btn) =&#62; {
                 const ctxBtn = btn.getContext("2d");
             
                 btn.width = 40;
