refactor: refactor html

--- a/index.html
+++ b/index.html
@@ -1,111 +1,156 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>cv</title>
-  <link rel="stylesheet" href="css/style.css">
-  <link rel="icon" href="img/favicon.ico">
-</head>
-<body>
-  <div class="wrapper">
-    <header class="header">
-      <div class="container">
-        <nav class="nav">
-          <ul class="nav-list">
-            <li class="nav-item">
-              <a href="#contacts" class="nav-link">Contacts</a>
-            </li>
-            <li class="nav-item">
-              <a href="#summary" class="nav-link">Summary</a>
-            </li>
-            <li class="nav-item">
-              <a href="#skills" class="nav-link">Skills</a>
-            </li>
-            <li class="nav-item">
-              <a href="#code" class="nav-link">Code</a>
-            </li>
-            <li class="nav-item">
-              <a href="#courses" class="nav-link">Courses</a>
-            </li>
-            <li class="nav-item">
-              <a href="#projects" class="nav-link">Projects</a>
-            </li>
-            <li class="nav-item">
-              <a href="#education" class="nav-link">Education</a>
-            </li>
-            <li class="nav-item">
-              <a href="#english" class="nav-link">English</a>
-            </li>
-          </ul>
-        </nav>
-      </div>
-    </header>
-    <main class="main">
-      <div class="container main-container">
-        <section class="section" id="profile">
-          <img src="img/avatar.jpg" alt="avatar" class="avatar">
-          <div class="profile-info">
-            <h1 class="section-title">Andrey Kozimirov</h1>
-            <p class="profile-text">Junior Front-end Developer</p>
-          </div>
-        </section>
-        <section class="section" id="contacts">
-          <h2 class="section-title">Contacts</h2>
-          <ul class="contacts-list">
-            <li class="contacts-item">Moscow, Russia</li>
-            <li class="contacts-item">
-              Email: <a href="mailto:an.kozimirov@gmail.com" class="link">an.kozimirov@gmail.com</a>
-            </li>
-            <li class="contacts-item">
-              Github: <a href="https://github.com/kozandre" class="link">kozandre</a>
-            </li>
-            <li class="contacts-item">
-              Telegram: <a href="https://t.me/kozandre" class="link">kozandre</a>
-            </li>
-            <li class="contacts-item">
-              Discord: <a href="https://discordapp.com/users/349978058658152454/" class="link">jessepinkmanalbuquerque</a>
-            </li>
-          </ul>
-        </section>
-        <section class="section" id="summary">
-          <h2 class="section-title">Summary</h2>
-          <p class="summary-text">
-            Hello there! I'm a self-taught 20 year old passionate Front-end developer from Russia. My goal is to practice myself in Front-end development and I am really excited about what will be in the my future studies!
-          </p>
-        </section>
-        <section class="section" id="skills">
-          <h2 class="section-title">Skills</h2>
-          <ul class="skills-list">
-            <li class="skills-item">
-              <img src="https://img.shields.io/badge/-HTML-333?style=for-the-badge&amp;logo=html5" alt="html5" class="skills-img">
-            </li>
-            <li class="skills-item">
-              <img src="https://img.shields.io/badge/-CSS-333?style=for-the-badge&amp;logo=css3&amp;logoColor=blue" alt="css" class="skills-img">
-            </li>
-            <li class="skills-item">
-              <img src="https://img.shields.io/badge/-SASS-333?style=for-the-badge&amp;logo=SASS" alt="sass" class="skills-img">
-            </li>
-            <li class="skills-item">
-              <img src="https://img.shields.io/badge/-JavaScript-333?style=for-the-badge&amp;logo=javascript" alt="JavaScript" class="skills-img">
-            </li>
-            <li class="skills-item">
-              <img src="https://img.shields.io/badge/-TypeScript-333?style=for-the-badge&amp;logo=TypeScript" alt="TypeScript" class="skills-img">
-            </li>
-            <li class="skills-item">
-              <img src="https://img.shields.io/badge/-WebPack-333?style=for-the-badge&amp;logo=WebPack" alt="WebPack" class="skills-img">
-            </li>
-            <li class="skills-item">
-              <img src="https://img.shields.io/badge/-Git-333?style=for-the-badge&amp;logo=Git" alt="Git" class="skills-img">
-            </li>
-            <li class="skills-item">
-              <img src="https://img.shields.io/badge/-Figma-333?style=for-the-badge&amp;logo=Figma" alt="Figma" class="skills-img">
-            </li>
-          </ul>
-        </section>
-        <section class="section" id="code">
-          <h2 class="section-title">Code</h2>
-          <pre>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>cv</title>
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="icon" href="img/favicon.ico" />
+  </head>
+  <body>
+    <div class="wrapper">
+      <header class="header">
+        <div class="container">
+          <nav class="nav">
+            <ul class="nav-list">
+              <li class="nav-item">
+                <a href="#contacts" class="nav-link">Contacts</a>
+              </li>
+              <li class="nav-item">
+                <a href="#summary" class="nav-link">Summary</a>
+              </li>
+              <li class="nav-item">
+                <a href="#skills" class="nav-link">Skills</a>
+              </li>
+              <li class="nav-item">
+                <a href="#code" class="nav-link">Code</a>
+              </li>
+              <li class="nav-item">
+                <a href="#courses" class="nav-link">Courses</a>
+              </li>
+              <li class="nav-item">
+                <a href="#projects" class="nav-link">Projects</a>
+              </li>
+              <li class="nav-item">
+                <a href="#education" class="nav-link">Education</a>
+              </li>
+              <li class="nav-item">
+                <a href="#english" class="nav-link">English</a>
+              </li>
+            </ul>
+          </nav>
+        </div>
+      </header>
+      <main class="main">
+        <div class="container main-container">
+          <section class="section" id="profile">
+            <img src="img/avatar.jpg" alt="avatar" class="avatar" />
+            <div class="profile-info">
+              <h1 class="section-title">Andrey Kozimirov</h1>
+              <p class="profile-text">Junior Front-end Developer</p>
+            </div>
+          </section>
+          <section class="section" id="contacts">
+            <h2 class="section-title">Contacts</h2>
+            <ul class="contacts-list">
+              <li class="contacts-item">Moscow, Russia</li>
+              <li class="contacts-item">
+                Email:
+                <a href="mailto:an.kozimirov@gmail.com" class="link"
+                  >an.kozimirov@gmail.com</a
+                >
+              </li>
+              <li class="contacts-item">
+                Github:
+                <a href="https://github.com/kozandre" class="link">kozandre</a>
+              </li>
+              <li class="contacts-item">
+                Telegram:
+                <a href="https://t.me/kozandre" class="link">kozandre</a>
+              </li>
+              <li class="contacts-item">
+                Discord:
+                <a
+                  href="https://discordapp.com/users/349978058658152454/"
+                  class="link"
+                  >jessepinkmanalbuquerque</a
+                >
+              </li>
+            </ul>
+          </section>
+          <section class="section" id="summary">
+            <h2 class="section-title">Summary</h2>
+            <p class="summary-text">
+              Hello there! I'm a self-taught 20 year old passionate Front-end
+              developer from Russia. My goal is to practice myself in Front-end
+              development and I am really excited about what will be in the my
+              future studies!
+            </p>
+          </section>
+          <section class="section" id="skills">
+            <h2 class="section-title">Skills</h2>
+            <ul class="skills-list">
+              <li class="skills-item">
+                <img
+                  src="https://img.shields.io/badge/-HTML-333?style=for-the-badge&amp;logo=html5"
+                  alt="html5"
+                  class="skills-img"
+                />
+              </li>
+              <li class="skills-item">
+                <img
+                  src="https://img.shields.io/badge/-CSS-333?style=for-the-badge&amp;logo=css3&amp;logoColor=blue"
+                  alt="css"
+                  class="skills-img"
+                />
+              </li>
+              <li class="skills-item">
+                <img
+                  src="https://img.shields.io/badge/-SASS-333?style=for-the-badge&amp;logo=SASS"
+                  alt="sass"
+                  class="skills-img"
+                />
+              </li>
+              <li class="skills-item">
+                <img
+                  src="https://img.shields.io/badge/-JavaScript-333?style=for-the-badge&amp;logo=javascript"
+                  alt="JavaScript"
+                  class="skills-img"
+                />
+              </li>
+              <li class="skills-item">
+                <img
+                  src="https://img.shields.io/badge/-TypeScript-333?style=for-the-badge&amp;logo=TypeScript"
+                  alt="TypeScript"
+                  class="skills-img"
+                />
+              </li>
+              <li class="skills-item">
+                <img
+                  src="https://img.shields.io/badge/-WebPack-333?style=for-the-badge&amp;logo=WebPack"
+                  alt="WebPack"
+                  class="skills-img"
+                />
+              </li>
+              <li class="skills-item">
+                <img
+                  src="https://img.shields.io/badge/-Git-333?style=for-the-badge&amp;logo=Git"
+                  alt="Git"
+                  class="skills-img"
+                />
+              </li>
+              <li class="skills-item">
+                <img
+                  src="https://img.shields.io/badge/-Figma-333?style=for-the-badge&amp;logo=Figma"
+                  alt="Figma"
+                  class="skills-img"
+                />
+              </li>
+            </ul>
+          </section>
+          <section class="section" id="code">
+            <h2 class="section-title">Code</h2>
+            <pre>
             <code>
             function drawButtons(btns) {
               btns.forEach((btn) =&#62; {
@@ -123,66 +168,79 @@
             }
             </code>
           </pre>
-        </section>
-        <section class="section" id="courses">
-          <h2 class="section-title">Courses</h2>
-          <ul class="courses-list">
-            <li class="courses-item">
-              The Odin Project: Foundations Course
-            </li>
-            <li class="courses-item">
-              W3Schools HTML tutorial
-            </li>
-            <li class="courses-item">
-              Microsoft Learn’s TypeScript modules:
-              <a href="https://kozandre.github.io/typescript-essentials/" class="link">TypeScript Essentials</a>
-            </li>
-          </ul>
-        </section>
-        <section class="section" id="projects">
-          <h2 class="section-title">Projects</h2>
-          <ul class="projects-list">
-            <li class="projects-item">
-              <a href="https://rolling-scopes-school.github.io/yelqo17-JSFE2023Q4/coffee-house/" class="link">Coffee House</a>
-            </li>
-            <li class="projects-item">
-              <a href="https://rolling-scopes-school.github.io/yelqo17-JSFE2023Q4/nonograms/" class="link">Nonograms</a>
-            </li>
-            <li class="projects-item">
-              <a href="https://github.com/kozandre/MafiaGame" class="link">Mafia Game</a>
-            </li>
-          </ul>
-        </section>
-        <section class="section" id="education">
-          <h2 class="section-title">Education</h2>
-          <p>Moscow Aviation Institute</p>
-        </section>
-        <section class="section" id="english">
-          <h2 class="section-title">English</h2>
-          <ul class="languages-list">
-            <li class="lang-item">
-              Russian - native
-            </li>
-            <li class="lang-item">
-              Polish - Intermediate (B1)
-            </li>
-            <li class="lang-item">
-              <a href="https://www.efset.org/cert/PqGU54" class="link">English - Proficient (C2)</a>
-            </li>
-          </ul>
-        </section>
-      </div>
-    </main>
-    <footer class="footer">
-      <div class="container">
-        <p class="copyright-text">&copy; 2024
-          <a href="https://github.com/kozandre" class="link">kozandre</a>
-        </p>
-        <a href="https://rs.school/courses/javascript-ru" class="course-link">
-          <img src="img/rs-school-logo.svg" alt="rss-logo" class="course-logo">
-        </a>
-      </div>
-    </footer>
-  </div>
-</body>
+          </section>
+          <section class="section" id="courses">
+            <h2 class="section-title">Courses</h2>
+            <ul class="courses-list">
+              <li class="courses-item">The Odin Project: Foundations Course</li>
+              <li class="courses-item">W3Schools HTML tutorial</li>
+              <li class="courses-item">
+                Microsoft Learn’s TypeScript modules:
+                <a
+                  href="https://kozandre.github.io/typescript-essentials/"
+                  class="link"
+                  >TypeScript Essentials</a
+                >
+              </li>
+            </ul>
+          </section>
+          <section class="section" id="projects">
+            <h2 class="section-title">Projects</h2>
+            <ul class="projects-list">
+              <li class="projects-item">
+                <a
+                  href="https://rolling-scopes-school.github.io/yelqo17-JSFE2023Q4/coffee-house/"
+                  class="link"
+                  >Coffee House</a
+                >
+              </li>
+              <li class="projects-item">
+                <a
+                  href="https://rolling-scopes-school.github.io/yelqo17-JSFE2023Q4/nonograms/"
+                  class="link"
+                  >Nonograms</a
+                >
+              </li>
+              <li class="projects-item">
+                <a href="https://github.com/kozandre/MafiaGame" class="link"
+                  >Mafia Game</a
+                >
+              </li>
+            </ul>
+          </section>
+          <section class="section" id="education">
+            <h2 class="section-title">Education</h2>
+            <p>Moscow Aviation Institute</p>
+          </section>
+          <section class="section" id="english">
+            <h2 class="section-title">English</h2>
+            <ul class="languages-list">
+              <li class="lang-item">Russian - native</li>
+              <li class="lang-item">Polish - Intermediate (B1)</li>
+              <li class="lang-item">
+                <a href="https://www.efset.org/cert/PqGU54" class="link"
+                  >English - Proficient (C2)</a
+                >
+              </li>
+            </ul>
+          </section>
+        </div>
+      </main>
+      <footer class="footer">
+        <div class="container">
+          <p class="copyright-text">
+            &copy; 2024
+            <a href="https://github.com/kozandre" class="link">kozandre</a>
+          </p>
+          <a href="https://rs.school/courses/javascript-ru" class="course-link">
+            <img
+              src="img/rs-school-logo.svg"
+              alt="rss-logo"
+              class="course-logo"
+            />
+          </a>
+        </div>
+      </footer>
+    </div>
+  </body>
 </html>
