fix: remove self-closing tags

--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>cv</title>
-    <link rel="stylesheet" href="css/style.css" />
-    <link rel="icon" href="img/favicon.ico" />
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" href="img/favicon.ico">
   </head>
   <body>
     <div class="wrapper">
@@ -44,7 +44,7 @@
       <main class="main">
         <div class="container main-container">
           <section class="section" id="profile">
-            <img src="img/avatar.jpg" alt="avatar" class="avatar" />
+            <img src="img/avatar.jpg" alt="avatar" class="avatar">
             <div class="profile-info">
               <h1 class="section-title">Andrey Kozimirov</h1>
               <p class="profile-text">Junior Front-end Developer</p>
@@ -95,56 +95,56 @@
                   src="https://img.shields.io/badge/-HTML-333?style=for-the-badge&amp;logo=html5"
                   alt="html5"
                   class="skills-img"
-                />
+                >
               </li>
               <li class="skills-item">
                 <img
                   src="https://img.shields.io/badge/-CSS-333?style=for-the-badge&amp;logo=css3&amp;logoColor=blue"
                   alt="css"
                   class="skills-img"
-                />
+                >
               </li>
               <li class="skills-item">
                 <img
                   src="https://img.shields.io/badge/-SASS-333?style=for-the-badge&amp;logo=SASS"
                   alt="sass"
                   class="skills-img"
-                />
+                >
               </li>
               <li class="skills-item">
                 <img
                   src="https://img.shields.io/badge/-JavaScript-333?style=for-the-badge&amp;logo=javascript"
                   alt="JavaScript"
                   class="skills-img"
-                />
+                >
               </li>
               <li class="skills-item">
                 <img
                   src="https://img.shields.io/badge/-TypeScript-333?style=for-the-badge&amp;logo=TypeScript"
                   alt="TypeScript"
                   class="skills-img"
-                />
+                >
               </li>
               <li class="skills-item">
                 <img
                   src="https://img.shields.io/badge/-WebPack-333?style=for-the-badge&amp;logo=WebPack"
                   alt="WebPack"
                   class="skills-img"
-                />
+                >
               </li>
               <li class="skills-item">
                 <img
                   src="https://img.shields.io/badge/-Git-333?style=for-the-badge&amp;logo=Git"
                   alt="Git"
                   class="skills-img"
-                />
+                >
               </li>
               <li class="skills-item">
                 <img
                   src="https://img.shields.io/badge/-Figma-333?style=for-the-badge&amp;logo=Figma"
                   alt="Figma"
                   class="skills-img"
-                />
+                >
               </li>
             </ul>
           </section>
@@ -237,7 +237,7 @@
               src="img/rs-school-logo.svg"
               alt="rss-logo"
               class="course-logo"
-            />
+            >
           </a>
         </div>
       </footer>
